@@ -33,6 +33,7 @@ import org.eclipse.sirius.components.core.api.IEditingContext;
 import org.eclipse.sirius.components.core.api.IObjectService;
 import org.eclipse.sirius.components.core.api.IPayload;
 import org.eclipse.sirius.components.core.api.IRepresentationDescriptionSearchService;
+import org.eclipse.sirius.components.core.api.WorkbenchSelection;
 import org.eclipse.sirius.components.diagrams.Diagram;
 import org.eclipse.sirius.components.diagrams.Node;
 import org.eclipse.sirius.components.diagrams.Position;
@@ -114,7 +115,12 @@ public class InvokeNodeToolOnDiagramEventHandler implements IDiagramEventHandler
                 IStatus status = this.executeTool(editingContext, diagramContext, input.getDiagramElementId(), optionalTool.get(), input.getStartingPositionX(), input.getStartingPositionY(),
                         input.getSelectedObjectId());
                 if (status instanceof Success) {
-                    payload = new InvokeNodeToolOnDiagramSuccessPayload(diagramInput.getId(), diagram);
+                    WorkbenchSelection newSelection = null;
+                    Object newSelectionParameter = ((Success) status).getParameters().get(Success.NEW_SELECTION);
+                    if (newSelectionParameter instanceof WorkbenchSelection) {
+                        newSelection = (WorkbenchSelection) newSelectionParameter;
+                    }
+                    payload = new InvokeNodeToolOnDiagramSuccessPayload(diagramInput.getId(), newSelection);
                     changeDescription = new ChangeDescription(ChangeKind.SEMANTIC_CHANGE, diagramInput.getRepresentationId(), diagramInput);
                 } else if (status instanceof Failure) {
                     payload = new ErrorPayload(diagramInput.getId(), ((Failure) status).getMessage());
