@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2021 Obeo.
+ * Copyright (c) 2019, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -375,6 +375,7 @@ public class ToolProvider implements IToolProvider {
         List<NodeDescription> targetDescriptions = targetDescriptionIds.stream()
                 .map(UUID::fromString)
                 .map(id2NodeDescriptions::get)
+                .filter(Objects::nonNull)
                 .collect(Collectors.toList());
         return CreateNodeTool.newCreateNodeTool(id)
                 .label(label)
