@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Obeo.
+ * Copyright (c) 2021, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -22,6 +22,8 @@ import java.util.Objects;
  * @author gcoutable
  */
 public class Success implements IStatus {
+
+    public static final String NEW_SELECTION = "newSelection"; //$NON-NLS-1$
 
     private final Map<String, Object> parameters;
 
